--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 spring.application.name=menu_food
+spring.datasource.url=jdbc:postgresql://localhost:5432/food
+spring.datasource.username=jvmeira25
+spring.datasource.password=password
